# Carbonac

./: .dockerignore  .env.example  .env.hp  .env.pi  .gitattributes  .gitignore  00-MASTER-SPECIFICATION.md  CLAUDE.md  Carbonac.code-workspace  Narsante_Ambalaj_Stili_Kilavuzu_v1_2.md  README.md  USAGE.md  ai_studio_code.py  docker-compose.hp.yml  docker-compose.raspberry.yml  docker-compose.yml  netlify.toml  package-lock.json  package.json
.github/: copilot-instructions.md  pull_request_template.md
ai-hub/: AI-HUB_OPTIMIZATION_REPORT_2026-02-07.md  docker-compose.yaml  setup.sh
ai-hub/mcp-ollama/: pyproject.toml  server.py
backend/: auth.js  env.js  job-store.js  package-lock.json  package.json  preflight.js  press-pack-schema.js  press-pack-store.js  queue.js  release-store.js  server.js  storage.js  template-fallbacks.js  templates-store.js  usage-store.js  worker.js
docker/: Dockerfile.api  Dockerfile.worker
docs/: AI-AGENT-PIPELINE.md  CARBON-AI-CHAT-ENTEGRE.md  CARBON-DATAVIZ-ENTEGRASYON.md  CHART-TABLE-STANDARDS.md  COMPONENT-AST.md  DEFINITION-OF-DONE.md  DIRECTIVE-DSL.md  EK-GELISTIRME-ONERILERI.md  FAZ-0-SPRINT-0.md  FAZ-1-SPRINT-1.md  FAZ-1-SPRINT-2.md  FAZ-2-SPRINT-3.md  FAZ-3-SPRINT-5.md  FAZ-3-SPRINT-6.md  IS-PLANI.md  OBSERVABILITY-RUNBOOK.md  PARSER-PIPELINE.md  PATTERN-LIBRARY.md  PROD-GO-LIVE-AI-AGENT.md  PROD-GO-LIVE-PLAN.md  PRODUCTION-GO-LIVE-PLAN.md  PROJE-DURUMU.md  PROJE-MIMARISI.md  PROJE-MIMARISIS-VE-OZELLIKLERI.md  PROJE-TALIMATLARI.md  RASPBERRY-DOCKER.md  REPO-HARITASI.md  SCHEMA-KONTRATLARI.md  SPRINT-0-DELIVERABLES.md  (+6 more)
(+293 files in other folders)
