[project]
name = "mcp-ollama-aihub"
version = "0.1.0"
description = "MCP server for distributed Ollama models across Tailscale AI-Hub"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
